enterprise/app/org/org.css
.organization-page {
  margin-top: 32px;
}

.organization-page-title {
  font-size: 32px;
  padding-bottom: 32px;
  border-bottom: 1px solid #eee;
  font-weight: 700;
  margin-bottom: 32px;
}

.organization-page-link {
  font-weight: 600;
  text-decoration: underline;
}

.organization-page .banner {
  margin: 16px 0;
}

.organization-form {
  max-width: 600px;
}

.organization-form .bold {
  font-weight: 600;
}

.organization-form .form-row {
  margin-bottom: 16px;
  display: flex;
}

.organization-form .form-row.stacked {
  flex-direction: column;
}

.organization-form .form-row.stacked > :not(:last-child) {
  margin-bottom: 8px;
}

.organization-form .form-row:not(.stacked) {
  align-items: center;
}

.organization-form .form-row:not(.stacked) > :not(:last-child) {
  margin-right: 8px;
}

.organization-form input[type="text"] {
  display: block;
  width: 400px;
  max-width: 100%;
  height: 40px;
  font-family: inherit;
  font-size: inherit;
  padding: 16px;
  box-sizing: border-box;
  appearance: none;
  -webkit-appearance: none;
  border: 1px solid gray;
  border-radius: 2px;
}

.organization-form .input-label-subtitle {
  font-size: 14px;
  color: #9e9e9e;
}

.organization-form .url-input-row {
  display: flex;
  align-items: center;
  align-self: start;
  background: var(--color-url-input-bg);
  width: 400px;
  box-sizing: border-box;
}

.organization-form .url-input-row span {
  flex-shrink: 0;
  padding: 8px;
}

.organization-form .url-input-row input {
  width: 0;
  flex-grow: 1;
}

.organization-form .select-wrapper {
  align-self: start;
}

.organization-form input[type="checkbox"] {
  width: 20px;
  height: 20px;
  flex-shrink: 0;
  align-self: start;
  user-select: none;
}

.base-button.organization-form-submit-button,
.organization-join-page .yes-no-button,
.organization-join-page .already-joined .button {
  padding: 16px 32px;
}

.organization-form .form-error {
  margin-top: 16px;
  color: #f44336;
}

.organization-form .form-success-message {
  margin-top: 16px;
  color: #388e3c;
}

.organization-form .input-help-text,
.organization-form .url-preview {
  font-size: 14px;
  color: var(--color-form-help-text);
  margin-top: -8px;
}

.organization-details-title {
  margin-bottom: 16px;
}

.organization-edit-form .organization-form-submit-button {
  margin-bottom: 0;
}

.organization-invite-link-container {
  background: var(--color-form-input-bg-secondary);
  border-radius: 8px;
  padding: 16px;
  display: inline-flex;
  align-items: center;
  margin-bottom: 16px;
  flex-wrap: wrap;
}

.organization-invite-link-container > :not(:last-child) {
  margin-right: 8px;
}

.organization-invite-link-container svg {
  width: 16px;
  height: 16px;
  margin-right: 16px;
}

.organization-invite-link-container .invite-link {
  color: var(--color-org-invite-link);
  font-weight: 600;
}

.organization-join-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  padding: 24px;
}

.organization-join-page .title {
  font-weight: 500;
  font-size: 36px;
  margin: 32px 0;
  text-align: center;
}

.organization-join-page .org-name {
  font-weight: 700;
}

.organization-join-page .yes-no-buttons {
  display: flex;
  align-items: center;
}

.organization-join-page .yes-no-buttons > :not(:last-child) {
  margin-right: 16px;
}

.organization-join-page .illustration {
  width: 128px;
  /* Trim off whitespace for optical alignment. */
  margin-bottom: -24px;
}

.organization-join-page .submit-result,
.organization-join-page .submit-result {
  margin-top: 32px;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 640px;
}

.organization-join-page .submit-result :not(:last-child) {
  margin-bottom: 32px;
}

.org-join-requests .org-join-requests-header {
  font-weight: 700;
  margin-bottom: 16px;
  font-size: 18px;
}

.org-join-requests {
  background: #e3f2fd;
  padding: 32px 0 38px 0;
  border-radius: 8px;
}

.org-join-requests.with-margin {
  margin: 16px;
}

.org-join-requests .org-join-requests-grid {
  display: grid;
  grid-template-columns: max-content max-content;
  gap: 32px;
  overflow-x: auto;
  align-items: center;
}

.org-join-requests .account {
  font-weight: 600;
}

.org-join-requests .name {
  opacity: 0.7;
  font-size: 14px;
}

.org-join-requests .approve-reject-buttons {
  display: flex;
  flex-wrap: nowrap;
}

.org-join-requests .approve-reject-buttons > :not(:last-child) {
  margin-right: 16px;
}

.org-join-requests .org-join-request-outcome {
  display: flex;
  align-items: center;
}

.org-join-requests .org-join-request-outcome > :not(:last-child) {
  margin-right: 8px;
}

.org-members {
  margin-top: 16px;
  max-width: 600px;
}

.org-members .org-members-list-controls {
  display: flex;
  align-items: center;
  padding: 8px 0px;
  gap: 8px;
  min-height: 40px;
}

.org-members .select-all-button {
  margin-right: auto;
}

.org-members .org-members-list-item {
  user-select: none;
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--color-border-primary);
  padding: 8px 16px;
  min-height: 48px;
  box-sizing: border-box;
  gap: 8px;
  transition: background-color 100ms ease-out;
}

.org-members .org-members-list-item.editable {
  cursor: pointer;
}

.org-members .org-members-list-item.editable:hover {
  background-color: var(--color-members-hover-bg);
}

.org-members .org-members-list-item:first-child {
  border-top: 1px solid var(--color-border-primary);
}

.org-members .org-members-list-item.selected {
  background-color: var(--color-members-selected-bg);
}

.org-members .org-member-name {
  font-weight: 600;
  display: flex;
  align-items: center;
  gap: 8px;
}

.org-members .org-member-name .org-member-user-list-count {
  font-weight: normal;
}

.org-members .org-member-name :is(svg, img) {
  width: 16px;
  height: 16px;
  color: var(--color-org-member-github-icon);
}

.org-members .org-member-role {
  margin-left: auto;
  padding: 4px 12px;
  border-radius: 13px;
  border: 1px solid transparent;
}

.org-members .org-member-role-unassigned {
  color: #616161;
}

.org-members .org-member-more-rows-link {
  cursor: pointer;
}

.org-members-edit-modal .select-role-row {
  display: flex;
  align-items: center;
  gap: 8px;
  font-weight: 600;
}

.org-members-edit-modal .modal-body {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.org-members-edit-modal .role-description {
  font-size: 14px;
  color: #616161;
  min-height: 40px;
}

.org-members-edit-modal .role-capabilities {
  border-collapse: collapse;
  font-size: 14px;
  width: 100%;
  margin-top: 8px;
}

.org-members-edit-modal .role-capabilities .icon {
  width: 20px;
}

.org-members-edit-modal .role-capabilities th {
  text-align: left;
}

.org-members-edit-modal .role-capabilities :is(td, th) {
  padding: 4px;
}

.org-members-edit-modal .role-capabilities tr {
  border-bottom: 1px solid #eee;
  border-top: 1px solid #eee;
}

.org-members-edit-modal .affected-users-list {
  max-height: 320px;
  overflow-y: auto;
  border: 1px solid #eee;
  border-radius: 8px;
}

.org-members-edit-modal .affected-users-list-item {
  display: flex;
  padding: 8px;
  gap: 8px;
  align-items: center;
}

.org-members-edit-modal .affected-users-list-item svg {
  width: 16px;
  height: 16px;
}

.org-members-edit-modal .affected-users-list > :not(:last-child) {
  border-bottom: 1px solid #eee;
}

.org-members-edit-modal .editing-self-warning {
  background: #ffcdd2;
  border-radius: 8px;
  padding: 16px;
}

.org-members-edit-modal .flagged-self-user {
  font-weight: 600;
  color: #e53935;
}

